RESOLVED FIXED151567
REGRESSION(r192053): MiniBrowser doesn't exit when clicking on the close-window button
https://bugs.webkit.org/show_bug.cgi?id=151567
Summary REGRESSION(r192053): MiniBrowser doesn't exit when clicking on the close-wind...
Renata Hodovan
Reported 2015-11-23 09:03:13 PST
Open www.google.com with MiniBrowser (debug or release) and try to close it with the close-window button in the corner. With an EFL build nothing happens for me (i.e. the window does not close). Could somebody test it with another port too?
Attachments
Patch (1.34 KB, patch)
2015-11-23 22:19 PST, Gyuyoung Kim
no flags
Patch (1.41 KB, patch)
2015-11-23 22:34 PST, Gyuyoung Kim
no flags
Patch (1.34 KB, patch)
2015-11-23 22:52 PST, Gyuyoung Kim
no flags
Blaze Burg
Comment 1 2015-11-23 15:15:14 PST
This does not seem to reproduce on Mac. Changing platform to EFL for now.
Gyuyoung Kim
Comment 2 2015-11-23 21:07:57 PST
This bug looks a regression.
Gyuyoung Kim
Comment 3 2015-11-23 22:19:34 PST
Hunseop Jeong
Comment 4 2015-11-23 22:30:55 PST
Comment on attachment 266120 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=266120&action=review > Tools/MiniBrowser/efl/main.c:2040 > + window_close(window_find_with_elm_window(elm_window)); If we don't use the parameters (user_data, event_info), how about removing them?
Gyuyoung Kim
Comment 5 2015-11-23 22:34:38 PST
Gyuyoung Kim
Comment 6 2015-11-23 22:35:40 PST
Comment on attachment 266120 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=266120&action=review >> Tools/MiniBrowser/efl/main.c:2040 >> + window_close(window_find_with_elm_window(elm_window)); > > If we don't use the parameters (user_data, event_info), how about removing them? It is not huge related with this fix though, let's remove unused parameters as well.
Gyuyoung Kim
Comment 7 2015-11-23 22:52:16 PST
Gyuyoung Kim
Comment 8 2015-11-23 23:08:17 PST
(In reply to comment #4) > Comment on attachment 266120 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=266120&action=review > > > Tools/MiniBrowser/efl/main.c:2040 > > + window_close(window_find_with_elm_window(elm_window)); > > If we don't use the parameters (user_data, event_info), how about removing > them? EFL MiniBrowser is C, not C++. So we can't omit parameter. http://stackoverflow.com/questions/8776810/parameter-name-omitted-c-vs-c
Hunseop Jeong
Comment 9 2015-11-23 23:13:43 PST
(In reply to comment #8) > (In reply to comment #4) > > Comment on attachment 266120 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=266120&action=review > > > > > Tools/MiniBrowser/efl/main.c:2040 > > > + window_close(window_find_with_elm_window(elm_window)); > > > > If we don't use the parameters (user_data, event_info), how about removing > > them? > > EFL MiniBrowser is C, not C++. So we can't omit parameter. > > http://stackoverflow.com/questions/8776810/parameter-name-omitted-c-vs-c Okay,, I just worry about some warning occur case like as c++. Thanks for the information.
WebKit Commit Bot
Comment 10 2015-11-24 16:20:51 PST
Comment on attachment 266124 [details] Patch Clearing flags on attachment: 266124 Committed r192767: <http://trac.webkit.org/changeset/192767>
WebKit Commit Bot
Comment 11 2015-11-24 16:20:56 PST
All reviewed patches have been landed. Closing bug.
Ryuan Choi
Comment 12 2015-12-07 02:47:49 PST
(In reply to comment #11) > All reviewed patches have been landed. Closing bug. Sorry for the late answer. I made a Bug 151934 to fix this regression.
Note You need to log in before you can comment on or make changes to this bug.