REGRESSION(r192053): MiniBrowser doesn't exit when clicking on the close-window button https://bugs.webkit.org/show_bug.cgi?id=151567

Reviewed by Darin Adler.

* MiniBrowser/efl/main.c: Call window_close() instead of ewk_view_try_close().
(on_window_deletion):


Canonical link: https://commits.webkit.org/169728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192767 268f45cc-cd09-0410-ab3c-d52691b4dbfc